28) Add fulldump makefile to create single image (boot+kernel+rootfs) for write direct to the flash<br>
29) Integrate kernel mode pppoe/ipv6 pass through. Default disable.<br>
30) Wifi more small step for power regulation. Default 30. (values=5,10,20,30,35,40,45,50,60,70,80,90,100% = reduce 12..0dB)<br>
31) STA mode - add AutoRoaming=1/0 variable. Enable disable connect migration over wifi ap based by SNR. Disable default.<br>
32) STA mode - add AutoConnect=1/0 variable. Enable connect to first AP is SSID to connect = NULL. Enable default.<br>
33) STA mode - add FastConnect=1/0 variable. Enable fast connect procedure to AP. Enable default.<br>
34) Update busybox to 1.18.x stable tree.<br>
35) Add support classful routes and rewrite (ms)staticroutes parser code.<br>
36) No more need restart services if ip no change at dhcp renew.<br>
37) Fix calculate some sysctl tune parametrs<br>
38) Fix resource leak (no socket close) station mode code in goahead<br>
39) Add auto try auto reconnect to AP if lease fail<br>

--) Add switch reinit mode at lease fail (need add in gui dhcpSwReset=0/1 default 0)<br>
--) Add support user specific tx rate of mcast pkt for igmp snooping (need add in gui McastMcs=0..15 default 0)<br>
--) Enable/Disable NAT fastpath with net.ipv4.netfilter.ip_conntrack_fastnat. Default enable. (need add in gui)<br>
--) Enable/Disable Cron variable CrondEnable=1/0. Default disable. (need add in gui)<br>
--) Replace original KabInet auth to small version by theMiron and default on (need gui write)<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>