@@ -111,7 +111,7 @@ CONFIG_USER_802_1X=y
 CONFIG_USER_WIRELESS_TOOLS=y
 CONFIG_USER_WIRELESS_TOOLS_IWCONFIG=y
 # CONFIG_USER_WIRELESS_TOOLS_IWGETID is not set
-# CONFIG_USER_WIRELESS_TOOLS_IWLIST is not set
+CONFIG_USER_WIRELESS_TOOLS_IWLIST=y
 CONFIG_USER_WIRELESS_TOOLS_IWPRIV=y
 # CONFIG_USER_WIRELESS_TOOLS_IWSPY is not set
 # CONFIG_USER_WIRELESS_TOOLS_IWEVENT is not set
