@@ -23,7 +23,7 @@ ChannelGeography=2
 BasicRate=351
 BeaconPeriod=100
 DtimPeriod=1
-TxPower=25
+TxPower=50
 DisableOLBC=0
 BGProtection=0
 TxAntenna=
