@@ -62,7 +62,7 @@ DisableOLBC=1
 BasicRate=351
 BeaconPeriod=100
 DtimPeriod=1
-TxPower=25
+TxPower=50
 BGProtection=0
 TxPreamble=1
 RTSThreshold=2347
